--- a/my_home_dir/nvim/coc-settings.json
+++ b/my_home_dir/nvim/coc-settings.json
@@ -10,5 +10,6 @@
         "usePlaceholders": true
       }
     }
-  }
+  },
+  "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/12.0.1/clangd_12.0.1/bin/clangd"
 }
