--- a/my_home_dir/nvim/coc-settings.json
+++ b/my_home_dir/nvim/coc-settings.json
@@ -9,6 +9,13 @@
       "initializationOptions": {
         "usePlaceholders": true
       }
+    },
+    "terraform": {
+      "command": "terraform-ls",
+      "args":["serve"],
+      "filetypes": ["terraform", "tf", "hcl", "tfvars"],
+      "initializationOptions": {},
+      "settings": {}
     }
   },
   "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/12.0.1/clangd_12.0.1/bin/clangd"
